@@ -124,6 +124,26 @@ class ImporterTest extends FunctionalTestCase
     }
 
     /**
+     * Imports the "designers" and checks whether we have the right count or not (3 expected)
+     *
+     * @test
+     */
+    public function importDesignersWithImporterStoresThreeRecords()
+    {
+        $messages = $this->subject->synchronize(
+                'tx_externalimporttest_designer',
+                0
+        );
+        // Get the number of designers stored
+        $countDesigners = $this->getDatabaseConnection()->selectCount(
+                'uid',
+                'tx_externalimporttest_designer'
+        );
+        // NOTE: the serializing of the Importer messages is a quick way to debug anything gone wrong
+        self::assertEquals(3, $countDesigners, serialize($messages));
+    }
+
+    /**
      * Imports the "products" with the "base" configuration and checks whether we have the right count or not
      * (2 expected). Furthermore relations with categories and tags are tested.
      *
